--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div style="margin-top:100px;">
+<div class="container" style="margin-top:100px;">
 
   <div class="row">
     {% if session.type in ['admin','hod','mentor'] %}
     <div class="col">
       <h3>Mentees</h3>
       <hr>
-      <table class="table table-hover table-dark">
+      <table class="table table-hover table-light">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -16,7 +16,7 @@
             <th scope="col">Year</th>
             <th scope="col">Branch</th>
             <th scope="col">Batches</th>
-            <th scope="col">Option</th>
+            <th colspan="3" class="text-center" scope="col">Option</th>
           </tr>
         </thead>
         <tbody>
@@ -43,14 +43,14 @@
     <div class="col">
       <h3>Mentors</h3>
       <hr>
-      <table class="table table-hover table-dark">
+      <table class="table table-hover table-light">
         <thead>
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Branch</th>
             <th scope="col">Batches</th>
-            <th scope="col">Option</th>
+            <th colspan="3" class="text-center" scope="col">Option</th>
           </tr>
         </thead>
         <tbody>
@@ -75,4 +75,8 @@
 
 
 </div>
+
+
+   
+
 {% endblock %}
