--- a/templates/meetings.html
+++ b/templates/meetings.html
@@ -2,6 +2,7 @@
 {% block body %}
 
 <div class="container" style="margin-top:100px;">
+    <h1>Upcomming meetings</h1>
     {% for meeting in meetings %}
     <a style="color:black" href="{{url_for('meeting',id=meeting.meeting_id)}}">
         <div class="card">
