--- a/templates/send_mail.html
+++ b/templates/send_mail.html
@@ -6,7 +6,7 @@
         <form action="{{url_for('send_mail')}}" method="post">
                 <h2 class="text-center">Send Mail</h2>
                 <div class="form-group">
-                    <label for="subject">Send to</label>
+                    <label for="subject">Subject</label>
                     <input class="form-control" type="text" name="subject" id="subject" placeholder="Subject">
                 </div>
                 <div class="form-group">
