--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 
     <div class="jumbotron">
-        <h1 class="display-4">Welcome Back ! {{session.fname}}</h1>
+        <h1 class="display-4">Welcome {{session.fname}} !</h1>
         <p class="lead">This web portal is designed for the mentors and their mentees.</p>
         <hr class="my-4">
         <p>It supports mentors and mentees to manage their profiles and meeting details.</p>
@@ -77,5 +77,7 @@
     {% endif %}
     {% endif %}
 </div>
+
+
 
 {% endblock %}
