--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
 <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -53,6 +54,9 @@
                 {% if session.type in ['mentee'] %}
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" href="{{url_for('documents')}}">Documents</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link active" href="{{url_for('achievements')}}">Achievements</a>
                 </li>
                 {% endif %}
                 {% if session.type in ['hod','admin','mentor'] %}
