all_changes_from_server

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <hr class="my-4">
         <p>It supports mentors and mentees to manage their profiles and meeting details.</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          <a class="btn btn-primary btn-lg" href="{{url_for('login')}}" role="button">Login</a>
         </p>
       </div>
 
