image upload issues

--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -16,7 +16,7 @@
     <div class="form-group">
       <label for="category">Category</label>
       <select class="form-control" name="category" id="category">
-        <option value="techinal">Technical</option>
+        <option value="technical">Technical</option>
         <option value="non_technical">Non Technical</option>
         <option value="sports">Sports</option>
         <option value="cultural">Cultural</option>
