--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container" style="margin-top:100px;">
-
+  {% include 'includes/_messages.html' %}
   <div class="row">
     {% if session.type in ['admin','hod','mentor'] %}
     <div class="col">
@@ -29,7 +29,7 @@
             <td>
               {{mentee.batch}}
             </td>
-            <td><a class="btn btn-sm btn-danger" href="#">Delete</a></td>
+            <td><a class="btn btn-sm btn-danger" href="{{url_for('delete_mentee',email=mentee.email)}}">Delete</a></td>
             <td><a class="btn btn-primary" href="{{url_for('view_profile',email=mentee.email)}}">View profile</a></td>
             <td><a class="btn btn-primary" href="{{url_for('view_chart',email=mentee.email)}}">Progress Chart</a></td>
             <td><a class="btn btn-primary" href="{{url_for('view_documents',email=mentee.email)}}">Documents</a></td>
