--- a/templates/add_mentee.html
+++ b/templates/add_mentee.html
@@ -3,9 +3,9 @@
   <div class="contact-clean">
     <div class="row">
       <div class="col-md-5">
-        {% include 'includes/_messages.html' %}
         <form action="{{url_for('add_mentee')}}" method="post">
-          <h2 class="text-center">Add Mentee</h2>
+          {% include 'includes/_messages.html' %}
+          <h2 class="text-center">Add New Mentee</h2>
           <div class="form-group">
             <input
               class="form-control"
@@ -48,7 +48,7 @@
           </div>
 
           <div class="form-group">
-            <label for="sel1">Assign Mentee</label>
+            <label for="sel1">Assign Mentor</label>
             <select name="batch" class="form-control" id="sel1">
               <option>{{mentor['fname']}} {{mentor['lname']}} </option>
             </select>
@@ -61,13 +61,25 @@
       </div>
       <!--First column end-->
       <div class="col-md-7">
+        <div class="row">
+          <div class="col-3">
+            <a class="btn btn-primary" href="">Status</a>
+          </div>
+          <div class="col-3">
+            <a class="btn btn-primary" href="">Issues</a>
+          </div>
+          <div class="col-3">
+            <a class="btn btn-primary" href="">Download</a>
+          </div>
+        </div>
+        <br />
         <table class="table table-hover table-dark">
           <thead>
             <tr>
               <th scope="col">#</th>
               <th scope="col">Name</th>
+              <th scope="col">Status</th>
               <th scope="col">Year</th>
-              <th scope="col">Branch</th>
               <th scope="col">Batches</th>
               <th scope="col">Option</th>
             </tr>
@@ -76,13 +88,19 @@
             {% for mentee in mentees %}
             <tr>
               <th scope="row">{{loop.index}}</th>
-              <td>{{mentee.fname}} {{mentee.mname}} {{mentee.lname}}</td>
+              <td>{{mentee.fname}}. {{mentee.mname[0]}}. {{mentee.lname}}</td>
               <td>{{mentee.year}}</td>
               <td>{{mentee.branch}}</td>
               <td>
                 {{mentee.batch}}
               </td>
-              <td><a class="btn btn-sm btn-danger" href="#">Delete</a></td>
+              <td>
+                <a
+                  class="btn btn-sm btn-danger"
+                  href="{{url_for('delete_mentee',email=mentee.email)}}"
+                  >Delete</a
+                >
+              </td>
               <td>
                 <a
                   class="btn btn-primary"
