--- a/templates/add_mentee.html
+++ b/templates/add_mentee.html
@@ -63,10 +63,14 @@
       <div class="col-md-7">
         <div class="row">
           <div class="col-3">
-            <a class="btn btn-primary" href="">Status</a>
+            <a
+              class="btn btn-primary"
+              href="{{url_for('mentee_status',email=mentor['email'])}}"
+              >Mentee Status</a
+            >
           </div>
           <div class="col-3">
-            <a class="btn btn-primary" href="">Issues</a>
+            <a class="btn btn-primary" href="">Personal Issues</a>
           </div>
           <div class="col-3">
             <a class="btn btn-primary" href="">Download</a>
