mtee status display in mtor

--- a/templates/add_mentee.html
+++ b/templates/add_mentee.html
@@ -93,7 +93,7 @@
             <tr>
               <th scope="row">{{loop.index}}</th>
               <td>{{mentee.fname}}. {{mentee.mname[0]}}. {{mentee.lname}}</td>
-              <td>{{mentee.year}}</td>
+              <td>{{mentee.status}}</td>
               <td>{{mentee.branch}}</td>
               <td>
                 {{mentee.batch}}
