--- a/templates/add_mentor.html
+++ b/templates/add_mentor.html
@@ -1,117 +1,104 @@
-{% extends 'layout.html' %}
-
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
 <div style="margin-top:50px;">
-    <div class="contact-clean">
-        <div class="row">
-            <div class="col-md-5">
+  <div class="contact-clean">
+    <div class="row">
+      <div class="col-md-5">
+        <form action="{{url_for('add_mentor')}}" method="post">
+          {% include 'includes/_messages.html' %}
+          <h2 class="text-center">Add Mentor</h2>
+          <div class="form-group">
+            <input
+              class="form-control"
+              type="text"
+              name="fname"
+              placeholder="First Name"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              class="form-control"
+              type="text"
+              name="mname"
+              placeholder="Middle Name"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              class="form-control"
+              type="text"
+              name="lname"
+              placeholder="Last Name"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              class="form-control"
+              type="email"
+              name="email"
+              placeholder="Email"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              class="form-control"
+              type="text"
+              name="phone"
+              placeholder="Phone number"
+            />
+          </div>
 
-                {% include 'includes/_messages.html' %}
-                <form action="{{url_for('add_mentor')}}" method="post">
-                    <h2 class="text-center">Add Mentor</h2>
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="fname" placeholder="First Name">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="mname" placeholder="Middle Name">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="lname" placeholder="Last Name">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="email" name="email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="phone" placeholder="Phone number">
-                    </div>
+          <div class="form-group">
+            <label for="sel2">Branch</label>
+            <select name="branch" class="form-control" id="sel2">
+              {% for branch in branches %} {% if session.type == 'hod' %} {% if
+              session.branch == branch.branch %}
+              <option>{{branch.branch}}</option>
+              {% endif %} {% endif %} {% if session.type == 'admin' %}
+              <option>{{branch.branch}}</option>
+              {% endif %} {% endfor %}
+            </select>
+          </div>
 
-                    <div class="form-group">
-                        <label for="sel2">Year</label>
-                        <select name="year" class="form-control" id="sel2">
-                            <option>select</option>
-                            <option>FE</option>
-                            <option>SE</option>
-                            <option>TE</option>
-                            <option>BE</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="sel2">Branch</label>
-                        <select name="branch" class="form-control" id="sel2">
-                            {% for branch in branches %}
-                            {% if session.type == 'hod' %}
-                            {% if session.branch == branch.branch %}
-                            <option>{{branch.branch}}</option>
-                            {% endif %}
-                            {% endif %}
-                            {% if session.type == 'admin' %}
-                            <option>{{branch.branch}}</option>
-                            {% endif %}
-                            {% endfor %}
-
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="sel3">Division</label>
-                        <select name="division" class="form-control" id="sel3">
-                            <option>select</option>
-                            <option>A</option>
-                            <option>B</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="sel4">Batch</label>
-                        <select name="batch" class="form-control" id="sel4">
-                            <option>select</option>
-                            <option>A</option>
-                            <option>B</option>
-                            <option>C</option>
-                            <option>D</option>
-                            <option>E</option>
-                        </select>
-                    </div>
-
-
-                    <div class="form-group">
-                        <button class="btn btn-primary" type="submit">Add </button>
-                    </div>
-                </form>
-            </div>
-            <!--First column end-->
-            <div class="col-md-7">
-                <table class="table table-hover table-dark">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Branch</th>
-                            <th scope="col">Batches</th>
-                            <th scope="col">Option</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for mentor in mentors %}
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>{{mentor.fname}} {{mentor.mname}} {{mentor.lname}}</td>
-                            <td>{{mentor.branch}}</td>
-                            <td>
-                                {% for batch in mentor.batch %}
-                                {{batch.batch_name}} - {{batch.year}} {{batch.division}} &nbsp;
-                                {% endfor %}
-                            </td>
-                            <td><a class="btn btn-sm btn-danger" href="#">Delete</a></td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">Add</button>
+          </div>
+        </form>
+      </div>
+      <!--First column end-->
+      <div class="col-md-7">
+        <table class="table table-hover table-dark">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Name</th>
+              <th scope="col">Branch</th>
+              <th scope="col">Mentees</th>
+              <th scope="col">Option</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for mentor in mentors %}
+            <tr>
+              <th scope="row">{{loop.index}}</th>
+              <td>{{mentor.fname}} {{mentor.mname}} {{mentor.lname}}</td>
+              <td>{{mentor.branch}}</td>
+              <td>
+                {{mentee_count[mentor.email]}}
+              </td>
+              <td>
+                <a
+                  class="btn btn-sm btn-danger"
+                  href="{{url_for('delete_mentor',email=mentor.email)}}"
+                  >Delete</a
+                >
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
 </div>
 
 {% endblock %}
